@@ -397,3 +397,5 @@
 2011-06-07  Cedric Bail
 
 	* Use Eina_File for JPEG loader.
+	* Add evas_object_image_load_orientation_get and evas_object_image_load_orientation_set,
+	that tell if we should honor the orientation information when loading image file.
